Bug 121785 - file opened from browser not saved from cache but downloaded again
Summary: file opened from browser not saved from cache but downloaded again
Status: RESOLVED FIXED
Alias: None
Product: kpdf
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Astals Cid
URL:
Keywords:
: 127821 136506 144000 148189 154026 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-02-11 20:25 UTC by arne anka
Modified: 2008-02-04 22:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description arne anka 2006-02-11 20:25:03 UTC
Version:           0.5.1 (using KDE 3.5.1, Debian Package 4:3.5.1-2 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15.2

i use kpdf as viewer for pdf-files from my browser. if i open a file on a remote host, the file is downloaded and opened. but if i save the file it's downloaded _again_ instead of using the cache.
Comment 1 Eric Thibodeau 2006-03-30 00:35:32 UTC
I second that motion...quite annoying when you've just downloaded a big PDF file and now have to re-download it...
Comment 2 Albert Astals Cid 2006-05-22 20:31:26 UTC
*** Bug 127821 has been marked as a duplicate of this bug. ***
Comment 3 Raúl 2006-08-24 22:32:15 UTC
I also vote vote for this.
Comment 4 Albert Astals Cid 2006-10-30 19:10:17 UTC
*** Bug 136506 has been marked as a duplicate of this bug. ***
Comment 5 Eric Thibodeau 2007-02-21 16:29:35 UTC
...so...over a year later... *poke* No official response from the devs...
Comment 6 Albert Astals Cid 2007-02-21 19:47:55 UTC
You really know how to motivate people, err, wait, you don't.
Comment 7 Eric Thibodeau 2007-02-21 20:11:01 UTC
Hmm...
/me puts on *cheerleading outfit and picks up PonPons*:
"Go DEVs GO! YaaaaaaaaaaYYYYYYY DEVVVVVSSSSS!"
Although I am not thoroughly convinced me dressed up as a cheerleader would render any successful attempts at motivating people ;)

...guess I thought this would have been a trivial yet "obvious" optimization feature one would definitely add to some software that downloads from the net then displays the data (yeah, whishfull thinking when looking at Flash vids and animations...)

Comment 8 Pino Toscano 2007-04-09 15:53:24 UTC
*** Bug 144000 has been marked as a duplicate of this bug. ***
Comment 9 Pino Toscano 2007-07-25 10:41:23 UTC
*** Bug 148189 has been marked as a duplicate of this bug. ***
Comment 10 Grmblmbl 2007-10-19 21:54:58 UTC
Well, I've got the same problem here.

KPDF 0.5.7
KDE 3.5.7
Mandriva 2008

I clicked on http://club.mandriva.com/xwiki/documentation/Master-Starter.pdf and Kpdf ran.  I wanted to save it and... Kpdf downloaded it again :/  50 MB twice, that's Ok for my DSL link but think of a 56K modem user.
Comment 11 Tommi Tervo 2007-12-14 14:01:20 UTC
*** Bug 154026 has been marked as a duplicate of this bug. ***
Comment 12 Pino Toscano 2008-01-15 13:25:07 UTC
SVN commit 761840 by pino:

Use the local file path, so remote URLs are not downloaded again. (For local files there is no change.)

BUG: 121785


 M  +1 -1      part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=761840
Comment 13 Pino Toscano 2008-01-15 13:37:44 UTC
Forgot to say: it will be in KDE 3.5.9.
Comment 14 solsTiCe 2008-02-04 20:08:59 UTC
OMG!

2 years to fix such a bug. 
i guess it's a one-liner... 

i like open source but when you see thing s like that happen... you began to be sad about it's future... 
Comment 15 Albert Astals Cid 2008-02-04 20:25:52 UTC
@ #14 read comment #6

Your comment only makes me want to quit, why should i continue developing to such ingrate beings like you?
Comment 16 Maciej Pilichowski 2008-02-04 21:12:11 UTC
Solstice, 
  please do a little math -- thousands of wishes, reported bugs and crashes. Limited resources (number of developers + work in spare time). All new code has to be designed and put to fit the rest of the software. 

It is not easy, so it is better not annoy developers just by saying it is lame or something. If you still think this is lame, example speaks for itself better than words -- show us your skills, i.e. your patch. Any help is always highly appreciated.

Help. Not complains. It does not help, quite vice versa.

Albert,
  Please don't. There are pretty lot people (*) who know what it takes to develop programs and respect yours (and others) work. And the rest -- let's hope they will understand (sooner than later :-) ).
  One of those * says: thank you!
Comment 17 Eric Thibodeau 2008-02-04 22:13:03 UTC
Albert: Thanks on my behalfs, I personnaly have noticed the change and appreciate it very much. There were ways around this like pre-downloading the file and that suited me fine.