Use the local file path, so remote URLs are not downloaded again. (For local files there is no change.)

BUG: 121785

svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=761840